security/network-policies/base/monitoring/allow-prometheus-to-vote.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-prometheus-to-vote
  namespace: vote
  labels:
    environment: dev
spec:
  podSelector:
    matchLabels:
      app: vote
  policyTypes:
  - Ingress
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: monitoring
    ports:
    - protocol: TCP
      port: 8080
